--- a/chapter-02.tex
+++ b/chapter-02.tex
@@ -744,14 +744,14 @@ substitution rate is the rate at which mutations arise that will eventually
 become fixed within our population.\\
 
 Assume that there are two classes of mutational changes that can occur with a
-region, highly deleterious mutations and neutral mutations. A fraction
-$C$ of all mutational changes are highly deleterious, and can not
-possibly contribute to substitution nor polymorphism (i.e. $Ns \gg 1$).
-While a fraction $1-C$ are neutral. If our mutation rate is $\mu$ per
-transmitted allele per generation, then a total of $2N \mu (1-C)$
-neutral mutations enter our population each generation.\\
+region, highly deleterious mutations and neutral mutations. A fraction $C$ of
+all mutational changes are highly deleterious, and can not possibly contribute
+to substitution nor polymorphism (i.e. $Ns \gg 1$).  The other $1-C$ fraction
+of mutations are neutral. If our mutation rate is $\mu$ per transmitted allele
+per generation, then a total of $2N \mu (1-C)$ neutral mutations enter our
+population each generation.\\
 
-Each of these neutral mutations has a $1/(2N)$ probability chance of
+Each of these neutral mutations has a $\nicefrac{1}{(2N)}$ probability chance of
 eventually becoming fixed in the population. Therefore, the rate at
 which neutral mutations arise that eventually become fixed within our
 population is  
@@ -842,7 +842,7 @@ connected by migration). The probability that one or other of them
 mutates in this time is $1-(1-\mu)^{2T}$. With probability
 $(1-\mu)^{2T} $ neither of our alleles mutate in the $T$ generations
 back in time before they find themselves back in the combined ancestral 
-population. Conditional on failing to mutating before the combined ancestral
+population. Conditional on failing to mutate before the combined ancestral
 population, the probability that they do manage to mutate before
 coalescing in that population of size $N_e$ is
 $\theta/(\theta+1)$. Putting these components together
@@ -862,7 +862,7 @@ into $\fst$.
 
 To understand this better we can make a simple
 approximation based on our mutation rate being very low, such that
-$N_e \mu \ll 1$ ao $H_S \approx
+$N_e \mu \ll 1$ so $H_S \approx
 4N_e\mu$, and that $\mu \ll 1$ and $\mu T \ll 1$. Assuming this, then  
 \begin{equation}
 H_B \approx 2 \mu T + 4N_e\mu. 
@@ -875,15 +875,15 @@ note that $\mu$ cancels out of this. In this simple toy model $\fst$
 is increasing because the amount of between population diversity 
 increases with the divergence time of the two populations (initially
 linearly with $T$). It does so at a rate
-give by $T/(4N_e)$ so that differentiation will be higher
+give by $\nicefrac{T}{(4N_e)}$ so that differentiation will be higher
 between populations separated by long divergence times or with small
 effective population sizes.
 
 \begin{question}
 The gorilla lineage split from the human-chimp lineage $\sim$7 million years ago. Let’s assume that this speciation event occurred instantaneously in allopatry with no subsequent gene flow. \\
-{\bf A)}	What is the probability of that Gorilla is not an outgroup to human and chimp at a single locus?\\
-{\bf B)}	It has been estimated that the Gorilla lineage is not an outgroup at around ~30\% of autosomal loci. What effective population size would you need to assume to explain this observation? Is that only plausible explanation?\\
-{\bf C)}	The Gorilla lineage is an outgroup for large portions of the X chromosome, what is a plausible explanation for this finding?
+{\bf A)}	What is the probability of that gorilla is not an outgroup to human and chimp at a single locus?\\
+{\bf B)}	It has been estimated that the gorilla lineage is not an outgroup at around ~30\% of autosomal loci. What effective population size would you need to assume to explain this observation? Is that only plausible explanation?\\
+{\bf C)}	The gorilla lineage is an outgroup for large portions of the X chromosome, what is a plausible explanation for this finding?
 \end{question}
 
 \paragraph{A simple model of migration between an island and the mainland.}
@@ -916,13 +916,13 @@ coalesce $t+1$ generations back is
 \frac{1}{2N_I}(1-m)^{2(t+1)} \left(1-\frac{1}{2N_I} \right)^{t} \approx
 \frac{1}{2N_I} \exp\left( -t\left (\frac{1}{2N_I} + 2m\right) \right),
 \end{equation}
-with the approximation following from assuming that $m \ll 1$ \& $1/(2N_I)
+with the approximation following from assuming that $m \ll 1$ \& $\frac{1}{(2N_I)}
 \ll 1$ (note that this is very similar to our derivation of
 heterozygosity above). The probability that our alleles coalescence before either one
 of them migrates off the island, irrespective of the time, is
 \begin{equation}
 \int_0^{\infty} \frac{1}{2N_I} \exp\left( -t\left (\frac{1}{2N_I} +
-    2m\right) \right) dt = \frac{1/(2N_I) }{1/(2N_I) +
+2m\right) \right) dt = \frac{\nicefrac{1}{(2N_I)}}{\nicefrac{1}{(2N_I)} +
     2m}.
 \end{equation}
 
@@ -932,19 +932,19 @@ island. Therefore, the only way that the alleles can be different from
 each other is if one or other of them migrates to the mainland, which
 happens with probability  
 \begin{equation}
-1 - \frac{1/(2N_I) }{1/(2N_I) + 2m}
+  1 - \frac{\nicefrac{1}{(2N_I)}}{\nicefrac{1}{(2N_I)} + 2m}
 \end{equation}
 Conditional on one or other of our alleles migrating to the mainland,
 both of our alleles represent independent draws from the mainland and
 so differ from each other with probability $H_M$. Therefore, the level of
 heterozygosity on the island is given by
 \begin{equation}
-H_I = (1 - \frac{1/(2N_I) }{1/(2N_I) + 2m})H_M
+  H_I = (1 - \frac{\nicefrac{1}{(2N_I)}}{1/(2N_I) + 2m})H_M
 \end{equation}
 So the reduction of heterozygosity on the island compared to the
 mainland is
 \begin{equation}
-F_{IM} = 1- \frac{H_I}{H_M} = \frac{ 1/(2N_I) }{1/(2N_I) + 2m} = \frac{ 1 }{1 + 4N_Im}.
+  F_{IM} = 1- \frac{H_I}{H_M} = \frac{\nicefrac{ 1}{(2N_I)}}{\nicefrac{1}{(2N_I)} + 2m} = \frac{ 1 }{1 + 4N_Im}.
 \end{equation}
 The level of inbreeding on the island compared to the mainland will
 be high in the migration rate is low and the effective population size
@@ -954,12 +954,12 @@ key parameter here is the number individuals on the island replaced by
 immigrants from the mainland each generation ($N_I m$).
 
 We have framed this as being about the reduction in genetic diversity on the
-island compared to the mainland. However, if we consider collecting a
+island compared to the mainland. However, if we consider collecting 
 individuals on the island and mainland in proportion to population
 sizes the total level of heterozygosity would be $H_T=H_M$, as samples
 from our mainland would greatly outnumber those from our
 island. Therefore, considering our island our sub-population we have
-derived another simple model of $F_{ST}$ .
+derived another simple model of $F_{ST}$.
 
 \begin{question}
 You are investigating a small river population of sticklebacks, which receives infrequent migrants from a very large marine population. At a set of (putativelyneutral biallelic markers the freshwater population has frequencies:\\
