minor errors corrected

--- a/chapter-02.tex
+++ b/chapter-02.tex
@@ -668,7 +668,7 @@ genealogy will cause a segregating polymorphism in the sample
 in the genealogy is $T_{tot}$ there is $T_{tot}$
 generations for mutations. So the total number of mutations
 segregating in our sample ($S$) is Poisson with mean $\mu T_{tot}$. Thus the
-expected number of segregting  in history a sample of size $n$ is
+expected number of segregating  in history a sample of size $n$ is
 \begin{equation}
 \E(S) = \mu \E(T_{tot}) = \sum_{i=n-1}^1 \frac{4N\mu }{i} = \theta
 \sum_{i=n-1}^1 \frac{1}{i}
@@ -773,15 +773,14 @@ total number of substitutions. We'll see below that a neutral allele
 takes on average $4N$ generations to fix from its introduction into
 the population.\\
 
-This is a really pretty result as the population size has completely
-canceled out of the neutral substitution rate. However, there is
-another way to see this in a more straightward way. If I look at a
-sequence in me compared to say a particular chimp, I'm looking at the mutations
-that have occurred in both of our germlines since they parted ways $T$
-generations ago. Since neutral alleles do not alter the probability
-of their transmission to the next generation, we are simply looking at
-the mutations that have occurred in $2T$ generations worth of
-transmissions. Thus the average number of neutral mutational
+This is a really pretty result as the population size has completely canceled
+out of the neutral substitution rate. However, there is another way to see this
+in a more straight forward way. If I look at a sequence in me compared to say a
+particular chimp, I'm looking at the mutations that have occurred in both of
+our germlines since they parted ways $T$ generations ago. Since neutral alleles
+do not alter the probability of their transmission to the next generation, we
+are simply looking at the mutations that have occurred in $2T$ generations
+worth of transmissions. Thus the average number of neutral mutational
 differences separating our pair of species is simply $2\mu (1-C) T$.\\
 
 \begin{question}
@@ -800,7 +799,7 @@ germline than in the male germline.
 
 \subsection{Neutral diversity and population structure}
 %%this section was moved from the coalescent chapter
-Upto now we have assumed that our alleles that we have modelled in the
+Up to now we have assumed that our alleles that we have modelled in the
 coalescent setting are drawn from a randomly mating population such
 that any pair of lineages is equally likely to coalesce with each
 other. However, when there is population structure this assumption is
@@ -962,7 +961,7 @@ island. Therefore, considering our island our sub-population we have
 derived another simple model of $F_{ST}$.
 
 \begin{question}
-You are investigating a small river population of sticklebacks, which receives infrequent migrants from a very large marine population. At a set of (putativelyneutral biallelic markers the freshwater population has frequencies:\\
+You are investigating a small river population of sticklebacks, which receives infrequent migrants from a very large marine population. At a set of (putatively neutral biallelic markers the freshwater population has frequencies:\\
 0.2, 0.7, 0.8\\
 at the same markers the marine population has frequencies:\\
 0.4, 0.5 and 0.7.\\
