added practice problems 1

--- a/Practice_Problems/Practice_Problems_1.tex
+++ b/Practice_Problems/Practice_Problems_1.tex
@@ -22,8 +22,12 @@ autosomal. Show your work, and state the asumptions you have to make
 \begin{question}
 You are studying a codominant flower colour polymorphism. Skipping
 through a meadow of flowers you compile the following data:
-red  pink  white\\
-200 100 200\\
+\begin{center}
+\begin{tabular}{ccc}
+red & pink  & white\\
+200 & 100 & 200\\
+\end{tabular}
+\end{center}
 {\bf A)} What frequencies would you expect at this locu under Hardy Weinberg equilibrium? \\
 {\bf B)} Calculate the inbreeding coefficient at this locus.\\ 
 {\bf C)} Name two distinct processes that could lead to the deviation
@@ -34,12 +38,20 @@ you see, and describe how they would result in a deficit of heterozygotes.
 The colour and shape of a a species of beetles wings are controled by two distinct
 polymorphisms (with alleles big/small and red/yellow respectively). 
 In a museum collection you estimate the frequency of the four
-haplotypes to be:
-big/red big/yellow small/red small/yellow\\
-0.69 0.00 0.09 0.22\\
+haplotypes to be:\\
+\begin{center}
+\begin{tabular}{cccc}
+big/red & big/yellow & small/red & small/yellow\\
+0.69 & 0.00 & 0.09 & 0.22\\
+\end{tabular}
+\end{center}
 This collection is from 60 years ago. In present day populations you
 estimate the frequencies of the haplotypes to be:\\
+\begin{center}
+\begin{tabular}{cccc}
 0.5452 0.1448 0.2348 0.0752\\
+\end{tabular}
+\end{center}
 {\bf A)} Assuming one generation per year, what is the recombination fraction
 between these loci?
 {\bf B} Qualitatively how would your answer change if you determined
@@ -131,6 +143,11 @@ The recombination fraction between your loci is 0.0005.\\
 How many generations back do you estimate that the Neanderthal
 admixture occurred?   
 \end{question}
+
+\begin{question}
+
+\end{question} 
+
 
 \begin{question}
 Under a model of (only) genetic drift why does the expected level of heterozygosity decrease by a factor of
