added practice problems 1

--- a/Practice_Problems/Practice_Problems_1.tex
+++ b/Practice_Problems/Practice_Problems_1.tex
@@ -49,7 +49,7 @@ This collection is from 60 years ago. In present day populations you
 estimate the frequencies of the haplotypes to be:\\
 \begin{center}
 \begin{tabular}{cccc}
-0.5452 0.1448 0.2348 0.0752\\
+0.5452 & 0.1448 & 0.2348 & 0.0752\\
 \end{tabular}
 \end{center}
 {\bf A)} Assuming one generation per year, what is the recombination fraction
@@ -132,6 +132,16 @@ cousins share a pair of great grandparents).
 \end{question}
 
 \begin{question}
+You sequence a genomic region of a species of Baboon. Out of 100
+thousand basepairs on average 2000 differ between each pair of
+sequences. Assume a per base mutation rate of $1 \times 10^{-8}$ and a
+generation time of ten years. \\
+{\bf A)} What is the effective population size of these Baboons? \\
+{\bf B)} What is the average coalescent time (in years) of a pair of
+sequences in this species?
+\end{question}
+
+\begin{question}
 You find a pair of sites where Neanderthal and human populations had a
 fixed difference at both loci (all neanderthals had one allele and all
 humans had the alternate allele). You find that in present day populations the frequency of haplotype with the
@@ -145,7 +155,10 @@ admixture occurred?
 \end{question}
 
 \begin{question}
-
+In a species of lemurs you estimate the allele frequency to be
+$20\%$. In a particular sub-population you estimate that the allele
+frequency is $10\%$. In this population only $9\%$ of individuals are
+heterozygote. What is $F_{IT}$, $F_{ST}$, and $F_{IS}$?   
 \end{question} 
 
 
