added practice problems 1

--- a/Practice_Problems/Practice_Problems_1.tex
+++ b/Practice_Problems/Practice_Problems_1.tex
@@ -28,7 +28,7 @@ red & pink  & white\\
 200 & 100 & 200\\
 \end{tabular}
 \end{center}
-{\bf A)} What frequencies would you expect at this locu under Hardy Weinberg equilibrium? \\
+{\bf A)} What frequencies would you expect at this locus under Hardy-Weinberg equilibrium? \\
 {\bf B)} Calculate the inbreeding coefficient at this locus.\\ 
 {\bf C)} Name two distinct processes that could lead to the deviation
 you see, and describe how they would result in a deficit of heterozygotes.
@@ -53,22 +53,25 @@ estimate the frequencies of the haplotypes to be:\\
 \end{tabular}
 \end{center}
 {\bf A)} Assuming one generation per year, what is the recombination fraction
-between these loci?
+between these loci?\\
 {\bf B} Qualitatively how would your answer change if you determined
 that crossing over only occurred in females and not in males?
 \end{question}
 
 \begin{question}
 Charles the 2$^{nd}$ of Spain was the offspring of a uncle-niece marriage. 
-{\bf A)} What were the relatedness coefficients ($r_0$, $r_1$, $r_2$) of his parents? 
-{\bf B)} What was Charles's inbreeding coefficient from this inbreeding loop?
+{\bf A)} What were the relatedness coefficients ($r_0$, $r_1$, $r_2$) of his parents? \\
+{\bf B)} What was Charles's inbreeding coefficient from this inbreeding loop?\\
 In answering this question ignore the other deeper inbreeding in his pedigree.
 \end{question}
 
 \begin{question}
 What are the relatedness coefficients of the X chromosome between:\\
-1) Two male full siblings?\\
-2) Two female full siblings?\\
+{\bf A)} Two male full siblings?\\
+{\bf B)} Two female full siblings?
+{\bf C)} What is the probability that a female offspring, of a full sib
+mating, is homozygous by descent at a locus on her X chromosome?
+by descent on
 \end{question}
 
 \begin{question}
@@ -80,7 +83,7 @@ the frequency of the wing-spot allele?
 \end{question}
 
 \begin{question}
-An allele has frequency of $0.01$ in the population. What the
+An allele has frequency of $0.001$ in the population. What the
 probability that both you and your first (full) cousin are heterozygote for
 the alele?
 \end{question}
@@ -121,7 +124,7 @@ the probability that two 1/2 sibs are both heterozygotes?
 \end{question}
 
 \begin{question}
-You are providing genetic counsoling for a couple. They are first
+You are providing genetic counseling to a couple. They are first
 cousins. The man is a heterozgote carrier for a rare recessive disease
 allele, the carrier status for the woman is unknown. The frequency of
 the allele is $0.00001$ in the population. 
@@ -133,7 +136,7 @@ cousins share a pair of great grandparents).
 
 \begin{question}
 You sequence a genomic region of a species of Baboon. Out of 100
-thousand basepairs on average 2000 differ between each pair of
+thousand basepairs, on average, 200 differ between each pair of
 sequences. Assume a per base mutation rate of $1 \times 10^{-8}$ and a
 generation time of ten years. \\
 {\bf A)} What is the effective population size of these Baboons? \\
@@ -158,12 +161,12 @@ admixture occurred?
 In a species of lemurs you estimate the allele frequency to be
 $20\%$. In a particular sub-population you estimate that the allele
 frequency is $10\%$. In this population only $9\%$ of individuals are
-heterozygote. What is $F_{IT}$, $F_{ST}$, and $F_{IS}$?   
+heterozygote. What is $F_{IT}$, $F_{ST}$, and $F_{IS}$ for this population?   
 \end{question} 
 
 
 \begin{question}
-Under a model of (only) genetic drift why does the expected level of heterozygosity decrease by a factor of
+Under a model of genetic drift why does the expected level of heterozygosity decrease by a factor of
 $1-\nicefrac{1}{(2N)}$ every generation? Explain your answer in terms
 of the probability of identity by descent.
 \end{question}
