--- a/Practice_Problems/Practice_Problems_1.tex
+++ b/Practice_Problems/Practice_Problems_1.tex
@@ -69,9 +69,8 @@ In answering this question ignore the other deeper inbreeding in his pedigree.
 What are the relatedness coefficients of the X chromosome between:\\
 {\bf A)} Two male full siblings?\\
 {\bf B)} Two female full siblings?
-{\bf C)} What is the probability that a female offspring, of a full sib
-mating, is homozygous by descent at a locus on her X chromosome?
-by descent on
+{\bf C)} What is the probability that a female offspring of a full sib
+mating is homozygous by descent at a locus on her X chromosome?
 \end{question}
 
 \begin{question}
@@ -85,7 +84,7 @@ the frequency of the wing-spot allele?
 \begin{question}
 An allele has frequency of $0.001$ in the population. What the
 probability that both you and your first (full) cousin are heterozygote for
-the alele?
+the allele?
 \end{question}
 
 \begin{question}
@@ -96,15 +95,14 @@ inbreeding coefficient is the probability that a locus is homozygous
 by descent.
 \end{question}
 
-\begin{question}
-Explain why multiple inbreeding loops in an individual's pedigree
-lead to higher levels of inbreeding. 
-\end{question}
+\begin{question} In terms of identity by descent, explain why multiple
+inbreeding loops in an individual's pedigree lead to higher levels of
+inbreeding.  \end{question}
 
 \begin{question}
 Based on museum samples, from $\sim 1800$, you estimate that the
 average heterozygosity in Northern Elephant Seals
-was $0.0304$ across many loci. Based on futher samples you estimate
+was $0.0304$ across many loci. Based on further samples you estimate
 that in $1960$ this had dropped to $0.011$. Elephant Seals have a
 generation time of $8$ years. \\
 What effective population size do you estimate is consistent with this
@@ -125,7 +123,7 @@ the probability that two 1/2 sibs are both heterozygotes?
 
 \begin{question}
 You are providing genetic counseling to a couple. They are first
-cousins. The man is a heterozgote carrier for a rare recessive disease
+cousins. The man is a heterozygote carrier for a rare recessive disease
 allele, the carrier status for the woman is unknown. The frequency of
 the allele is $0.00001$ in the population. 
 {\bf A) } If they have a child what is the probability that the
