added practice problems 1

--- a/Practice_Problems/Practice_Problems_1.tex
+++ b/Practice_Problems/Practice_Problems_1.tex
@@ -15,6 +15,14 @@
 \date{}
 \maketitle
 
+These study questions are to help you prepare for the exams.
+These, and questions given in the homework, are the sorts of questions
+that you can expect to see. Indeed, some of these questions are old
+exam questions.  Your answers should not to be handed in and no key
+will be posted.  If you have questions come to see your TA or
+instructor during office hours or try asking your peers for help in
+the Chat Room on Piazza. In the past people have worked together to 
+
 {\bf Unless otherwise stated assume that loci are biallelic and
 autosomal. Show your work, and state the asumptions you have to make
 (if any). }
@@ -68,7 +76,7 @@ In answering this question ignore the other deeper inbreeding in his pedigree.
 \begin{question}
 What are the relatedness coefficients of the X chromosome between:\\
 {\bf A)} Two male full siblings?\\
-{\bf B)} Two female full siblings?
+{\bf B)} Two female full siblings?\\
 {\bf C)} What is the probability that a female offspring of a full sib
 mating is homozygous by descent at a locus on her X chromosome?
 \end{question}
@@ -125,10 +133,10 @@ the probability that two 1/2 sibs are both heterozygotes?
 You are providing genetic counseling to a couple. They are first
 cousins. The man is a heterozygote carrier for a rare recessive disease
 allele, the carrier status for the woman is unknown. The frequency of
-the allele is $0.00001$ in the population. 
+the allele is $0.00001$ in the population. \\
 {\bf A) } If they have a child what is the probability that the
-child will be homozygote for the disease allele?  
-{\bf B)} How would your answer change if they were 2nd cousins)? (2nd
+child will be homozygote for the disease allele?  \\
+{\bf B)} How would your answer change if they were 2nd cousins? (2nd
 cousins share a pair of great grandparents).
 \end{question}
 
