--- a/chapter-01.tex
+++ b/chapter-01.tex
@@ -873,7 +873,8 @@ r^2 = \frac{D^2}{p_A(1-p_A) p_B(1-p_B) }
 \end{equation}
 as $D$ is a covariance, and $p_A(1-p_A) $ is the variance of an allele
 drawn at random from locus $A$, $r^2$ is the squared correlation
-coefficient.    \\
+coefficient.  Note that this $r$ in $r^2$ is NOT the recombination
+fraction.   \\
 
 %{\bf Q}\arabic{Question} \refstepcounter{Question}  
 \begin{question} 
