changes to eq sheet

--- a/Practice_Problems/Equation_sheet_1.tex
+++ b/Practice_Problems/Equation_sheet_1.tex
@@ -29,11 +29,11 @@ D_{AB} = p_{AB} - p_Ap_B \nonumber
 \end{equation}
 
 \begin{equation}
-H_t = \left(1-\frac{1}{2N_e} \right)^tH_0  \nonumber
+  H_t = \left(1-\frac{1}{2N_e} \right)^tH_0 \approx H_0 e^{-\nicefrac{t}{2N_e}} \nonumber
 \end{equation}
 
 \begin{equation}
-D_t=  (1-r)^t D_0 \nonumber
+  D_t=  (1-r)^t D_0 \approx D_0 e^{-rt} \nonumber
 \end{equation}
 
 \begin{equation}
@@ -41,7 +41,7 @@ D_t=  (1-r)^t D_0 \nonumber
 \end{equation}
 
 \begin{equation}
-F_{ij}= 0 \times r_0 + \nicefrac{1}{4} r_1  + \nicefrac{1}{2} r_2.  \nonumber
+  F_{ij}= 0 \times r_0 + (\nicefrac{1}{4}) r_1  + (\nicefrac{1}{2}) r_2.  \nonumber
 \label{eqn:coeffkinship}
 \end{equation}
 \begin{center}
