updated coal code

--- a/Practice_Problems/Equation_sheet_1.tex
+++ b/Practice_Problems/Equation_sheet_1.tex
@@ -24,6 +24,12 @@
 \date{}
 \maketitle
 
+\begin{center}
+\begin{tabular}{ccc}
+$(1-F) p^2 + F p$, & $(1-F) 2pq$, & $(1-F) q^2 + F q$ \nonumber
+\end{tabular}
+\end{center}
+
 \begin{equation}
 D_{AB} = p_{AB} - p_Ap_B \nonumber
 \end{equation}
@@ -44,11 +50,6 @@ D_{AB} = p_{AB} - p_Ap_B \nonumber
   F_{ij}= 0 \times r_0 + (\nicefrac{1}{4}) r_1  + (\nicefrac{1}{2}) r_2.  \nonumber
 \label{eqn:coeffkinship}
 \end{equation}
-\begin{center}
-\begin{tabular}{ccc}
-$(1-F) p^2 + F p$ & $(1-F) 2pq$ & $(1-F) q^2 + F q$ \nonumber
-\end{tabular}
-\end{center}
 
 \begin{equation}
 (1-\fit) =\frac{H_I}{H_S} \frac{H_S}{H_T}=(1-\fis)(1-\fst).\nonumber
