--- a/Practice_Problems/Practice_Problems_1.tex
+++ b/Practice_Problems/Practice_Problems_1.tex
@@ -21,11 +21,19 @@ that you can expect to see. Indeed, some of these questions are old
 exam questions.  Your answers should not to be handed in and no key
 will be posted.  If you have questions come to see your TA or
 instructor during office hours or try asking your peers for help in
-the Chat Room on Piazza. In the past people have worked together to 
+the Chat Room on Piazza.\\
+ In the past students have worked
+collaboratively on an answer key. We think that's great! However, remember to
+attempt the questions multiple times before looking at the answers.\\
+
+%Note that population genetics is an analytic
+%subject that requires repeatedly working through the problems to fully
+%understand it. 
 
 {\bf Unless otherwise stated assume that loci are biallelic and
-autosomal. Show your work, and state the asumptions you have to make
-(if any). }
+autosomal. \\
+For full credit on the exam you must show your work, and state the asumptions you have to make
+(if any). }\\
 
 \begin{question}
 You are studying a codominant flower colour polymorphism. Skipping
